// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. with a caption and a text 1`] = `
<blockquote
  url=""
>
  <div>
    <div>
      “
    </div>
    <div>
      <cite>
        Some content
      </cite>
    </div>
    <div>
      <div>
        A caption
      </div>
      <div>
        , Some extra text
      </div>
    </div>
  </div>
</blockquote>
`;

exports[`2. with a caption but no text 1`] = `
<blockquote
  url=""
>
  <div>
    <div>
      “
    </div>
    <div>
      <cite>
        Some content
      </cite>
    </div>
    <div>
      <div>
        
      </div>
      <div>
        Some extra text
      </div>
    </div>
  </div>
</blockquote>
`;

exports[`3. with a text but no caption 1`] = `
<blockquote
  url=""
>
  <div>
    <div>
      “
    </div>
    <div>
      <cite>
        Some content
      </cite>
    </div>
    <div>
      <div>
        
      </div>
      <div>
        Some extra text
      </div>
    </div>
  </div>
</blockquote>
`;

exports[`4. without a caption or a text 1`] = `
<blockquote
  url=""
>
  <div>
    <div>
      “
    </div>
    <div>
      <cite>
        Some content
      </cite>
    </div>
    <div>
      <div>
        
      </div>
      <div>
        
      </div>
    </div>
  </div>
</blockquote>
`;

exports[`5. with a twitter handle 1`] = `
<blockquote
  url="https://twitter.com/@twitter"
>
  <div>
    <div>
      “
    </div>
    <div>
      <cite>
        Some content
      </cite>
    </div>
    <div>
      <div>
        A caption
      </div>
      <div>
        
      </div>
      <div>
        <IconTwitter
          height={10}
          width={12}
        />
        <TextLink
          target="_blank"
          url="https://twitter.com/@twitter"
        >
          @twitter
        </TextLink>
      </div>
    </div>
  </div>
</blockquote>
`;
